--- a/_includes/header-page.html
+++ b/_includes/header-page.html
@@ -15,9 +15,10 @@
 
       <!-- Logo -->
       <div class="col-sm-2 col-xs-4 logo child-center-v">
-        <a href="{{ site.baseurl }}/index.html"><img src="{{ site.baseurl }}/images/logo.svg" width="100"
+        <a href="{{ site.baseurl }}/index.html"><img src="{{ site.baseurl }}/images/asceselogo.jpg" width="100"
             alt="Sera - OnePage Logo by Ohkimur"></a>
       </div>
+   
 
       <!-- Toggle Mobile Menu -->
       <div class="col-xs-8 toggle-menu child-center-v">
