--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
 
       <!-- Logo -->
       <div class="col-sm-2 col-xs-4 logo child-center-v">
-        <a href="{{ site.baseurl }}/index.html"><img src="{{ site.baseurl }}/images/asceselogo.jpg" width="100"
+        <a href="{{ site.baseurl }}/index.html"><img src="{{ site.baseurl }}/images/asceselogo.png" width="100"
             alt="Sera - OnePage Logo by Ohkimur"></a>
       </div>
 
@@ -35,14 +35,14 @@
         <!-- Navigation Menu -->
         <nav id="navMenu" class="nav-menu">
           <ul class="menu">
-            <li class="current-menu-item"><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#features">Features</a></li>
+            <li class="current-menu-item"><a href="#home">Principal</a></li>
+            <li><a href="#about">Sobre</a></li>
+            <li><a href="#features">Serviços</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#testimonials">Testimonials</a></li>
             <li><a href="#blog">Blog</a></li>
-            <li><a href="#team">Team</a></li>
-            <li><a href="#prices">Prices</a></li>
+            <li><a href="#team">Time</a></li>
+            <li><a href="#prices">Preços</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
