teste de update

--- a/_includes/sections/blog.html
+++ b/_includes/sections/blog.html
@@ -54,7 +54,7 @@
                 <p>{{ post.excerpt | strip_html }}</p>
               </div>
               <div class="show-more">
-                <a href="{{ site.baseurl }}{{ post.url }}" class="button">Read More</a>
+                <a href="{{ site.baseurl }}{{ post.url }}" class="button">Mais</a>
               </div>
             </div>
 
@@ -66,10 +66,10 @@
 
     </div>
 
-    <!-- View All Posts CTA -->
+    <!-- Ver Tudo CTA -->
     <div class="row view-posts text-center">
       <hr class="normal">
-      <a href="blog.html" class="button-cta button-focus col-md-3 col-sm-5 col-xs-8">View all posts</a>
+      <a href="blog.html" class="button-cta button-focus col-md-3 col-sm-5 col-xs-8">Ver Tudo</a>
     </div>
 
   </div>
