--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
       <div class="col-md-6 col-md-push-3 footer-info text-center">
 
         <div class="footer-logo">
-          <img src="{{ site.baseurl }}/images/logo-focus.svg" width="140" alt="Sera - OnePage Logo by Ohkimur" />
+          <img src="{{ site.baseurl }}/images/asceselogo.png" width="140" alt="Sera - OnePage Logo by Ohkimur" />
         </div>
 
         <div class="footer-info-text">
@@ -28,7 +28,7 @@
 
       <div class="col-md-8 col-md-push-2 footer-copyright">
         <div class="footer-text text-center">
-          <p>All Right Reserved!</p>
+          <p>Tods os direitos reservados</p>
           <p><a href="{{ site.footer-copyright-url }}">{{ site.footer-copyright-text }}</a> &copy; {{
             site.footer-copyright-year }} Copyright</p>
         </div>
