--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -34,7 +34,7 @@ layout: page
           {{ post.content | truncatewords:75 }}
         </div>
         <div class="show-more">
-          <a href="{{ site.baseurl }}{{ post.url }}" class="button">Read More</a>
+          <a href="{{ site.baseurl }}{{ post.url }}" class="button">Mais</a>
         </div>
       </div>
 
