--- a/_includes/sections/contact.html
+++ b/_includes/sections/contact.html
@@ -32,7 +32,7 @@
         <form id="sera-contact-form" action="https://formspree.io/{{ site.email }}" method="POST"
           class="contact-form container-fluid">
           <div class="col-md-6">
-            <input type="text" name="name" placeholder="Name" />
+            <input type="text" name="name" placeholder="Nome" />
           </div>
           <div class="col-md-6">
             <input type="text" name="website" placeholder="Website" />
@@ -41,13 +41,13 @@
             <input type="text" name="email" placeholder="Email" />
           </div>
           <div class="col-md-6">
-            <input type="text" name="subject" placeholder="Subject" />
+            <input type="text" name="subject" placeholder="Tópico" />
           </div>
           <div class="col-md-12">
-            <textarea name="message" rows="8" cols="40" placeholder="Message"></textarea>
+            <textarea name="message" rows="8" cols="40" placeholder="Mensagem"></textarea>
           </div>
           <div class="col-md-12 form-action">
-            <button type="submit" class="send-button">Send Message</button>
+            <button type="submit" class="send-button">Enviar</button>
           </div>
         </form>
       </div>
