--- a/_includes/widgets/about-widget.html
+++ b/_includes/widgets/about-widget.html
@@ -3,7 +3,7 @@
 
   <!-- Widget Header -->
   <header class="widget-header">
-    <h4 class="widget-title">About Me</h4>
+    <h4 class="widget-title">Sobre</h4>
   </header>
 
   <!-- Widget Content -->
