--- a/_includes/sections/parallax-features.html
+++ b/_includes/sections/parallax-features.html
@@ -48,7 +48,7 @@
       </div>
 
       <div class="col-md-4 phone">
-        <img src="{{ site.baseurl }}/images/phone.png" alt="Phone Image" />
+        <img src="{{ site.baseurl }}/images/phone2.png" alt="Phone Image" />
       </div>
 
       <div class="col-md-4 col-sm-6 text-left">
