--- a/_includes/sections/prices.html
+++ b/_includes/sections/prices.html
@@ -30,7 +30,7 @@
             <div class="plan-head">
               <h3 class="plan-title">Personal</h3>
               <hr class="normal">
-              <p class="plan-subtitle">From <span class="text-focus">{{ site.plan-personal-price }}</span> Per Month</p>
+              <p class="plan-subtitle">from <span class="text-focus">{{ site.plan-personal-price }}</span> Per Month</p>
             </div>
 
             <!-- Plan Content -->
@@ -59,7 +59,7 @@
               <div class="offer">Recommend</div>
               <h3 class="plan-title">Business</h3>
               <hr class="normal">
-              <p class="plan-subtitle">From <span class="text-focus">{{ site.plan-business-price }}</span> Per Month</p>
+              <p class="plan-subtitle">from <span class="text-focus">{{ site.plan-business-price }}</span> Per Month</p>
             </div>
 
             <!-- Plan Content -->
@@ -87,7 +87,7 @@
             <div class="plan-head">
               <h3 class="plan-title">Ultimate</h3>
               <hr class="normal">
-              <p class="plan-subtitle">From <span class="text-focus">{{ site.plan-ultimate-price }}</span> Per Month</p>
+              <p class="plan-subtitle">from <span class="text-focus">{{ site.plan-ultimate-price }}</span> Per Month</p>
             </div>
 
             <!-- Plan Content -->
