--- a/_includes/sections/prices.html
+++ b/_includes/sections/prices.html
@@ -30,7 +30,7 @@
             <div class="plan-head">
               <h3 class="plan-title">Personal</h3>
               <hr class="normal">
-              <p class="plan-subtitle">from <span class="text-focus">{{ site.plan-personal-price }}</span> Per Month</p>
+              <p class="plan-subtitle">A partir <span class="text-focus">{{ site.plan-personal-price }}</span> Por Mês</p>
             </div>
 
             <!-- Plan Content -->
@@ -44,7 +44,7 @@
 
             <!-- Plan Action -->
             <div class="plan-action">
-              <a href="{{ site.plan-personal-url }}" class="button">Get Started</a>
+              <a href="{{ site.plan-personal-url }}" class="button">Comprar</a>
             </div>
 
           </div>
@@ -59,7 +59,7 @@
               <div class="offer">Recommend</div>
               <h3 class="plan-title">Business</h3>
               <hr class="normal">
-              <p class="plan-subtitle">from <span class="text-focus">{{ site.plan-business-price }}</span> Per Month</p>
+              <p class="plan-subtitle">A partir <span class="text-focus">{{ site.plan-business-price }}</span> Por Mês</p>
             </div>
 
             <!-- Plan Content -->
@@ -73,7 +73,7 @@
 
             <!-- Plan Action -->
             <div class="plan-action">
-              <a href="{{ site.plan-business-url }}" class="button button-focus">Get Started</a>
+              <a href="{{ site.plan-business-url }}" class="button button-focus">Comprar</a>
             </div>
 
           </div>
@@ -87,7 +87,7 @@
             <div class="plan-head">
               <h3 class="plan-title">Ultimate</h3>
               <hr class="normal">
-              <p class="plan-subtitle">from <span class="text-focus">{{ site.plan-ultimate-price }}</span> Per Month</p>
+              <p class="plan-subtitle">A partir <span class="text-focus">{{ site.plan-ultimate-price }}</span> Por Mês</p>
             </div>
 
             <!-- Plan Content -->
@@ -101,7 +101,7 @@
 
             <!-- Plan Action -->
             <div class="plan-action">
-              <a href="{{ site.plan-ultimate-url }}" class="button">Get Started</a>
+              <a href="{{ site.plan-ultimate-url }}" class="button">Comprar</a>
             </div>
 
           </div>
